--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "express-error-factory",
   "version": "1.0.0",
-  "description": "A custom error and error middleware solution for Express, written in TypeScript with types in mind.",
-  "main": "index.js",
+  "description": "A custom error and error middleware solution for Express, written in TypeScript with error types and subtypes in mind.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "author": "Seth Berggren",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1"
+  "peerDependencies": {
+    "express": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
