Modify tsconfig.json to not compile tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "sourceMap": true,
     "outDir": "dist",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    
   },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.ts"]
 }
