--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "express-error-factory",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "A custom error and error middleware solution for Express, written in TypeScript with error types and subtypes in mind.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sethberggren/express-error-factory"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
